// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorsCitationView test  should render component with no contributors 1`] = `
<div>
  <span
    class="citationEditors empty"
  />
</div>
`;

exports[`EditorsCitationView test  should render component with one contributor 1`] = `
<div>
  <span
    class="citationEditors"
  >
     Edited by 
    <span
      class="citationAuthor"
      data-testid="rek-contributor-0"
    >
      Pedroso, Marcelo Monteiro
    </span>
    . 
  </span>
</div>
`;

exports[`EditorsCitationView test  should render component with three contributors 1`] = `
<div>
  <span
    class="citationEditors"
  >
     Edited by 
    <span
      class="citationAuthor"
      data-testid="rek-contributor-0"
    >
      Pedroso, Marcelo Monteiro
    </span>
    , 
    <span
      class="citationAuthor"
      data-testid="rek-contributor-1"
    >
      Smith, J
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-contributor-2"
    >
      Andersen, J
    </span>
    . 
  </span>
</div>
`;

exports[`EditorsCitationView test  should render component with two contributors 1`] = `
<div>
  <span
    class="citationEditors"
  >
     Edited by 
    <span
      class="citationAuthor"
      data-testid="rek-contributor-0"
    >
      Pedroso, Marcelo Monteiro
    </span>
     and 
    <span
      class="citationAuthor"
      data-testid="rek-contributor-1"
    >
      Smith, J
    </span>
    . 
  </span>
</div>
`;
